fix(plugin-provide-popup): popup z-index is low

--- a/packages/core/src/plugins/provide-popup/popupsControlled.scss
+++ b/packages/core/src/plugins/provide-popup/popupsControlled.scss
@@ -1,4 +1,5 @@
 .shikitor-popup {
+  z-index: 100;
   color: var(--shikitor-bg-color);
   background-color: var(--shikitor-fg-color);
   padding: 2px 4px;
